Live Data/mdapipkg/unpackaged/objects/Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Account__c</fullName>
        <label>Competitor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Competitor Product</label>
    <listViews>
        <fullName>All_Competitor_Products</fullName>
        <columns>Competitor_Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Competitor Products</label>
    </listViews>
    <nameField>
        <label>Competitor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>